--- a/4.data-analysis/6.linear-discriminant-analysis.ipynb
+++ b/4.data-analysis/6.linear-discriminant-analysis.ipynb
@@ -54,10 +54,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -810,7 +812,303 @@
    "cell_type": "markdown",
    "id": "dd0e1ecb-365f-435a-b718-79af373b5c77",
    "metadata": {},
-   "source": []
+   "source": [
+    "Dans une tâche de classification, on évalue généralement la performance du modèle avec une matrice de confusion et ses métriques dérivées : la **précision**, le **rappel**, et le **score F1**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4d63fe9-b3e4-4ec3-a7e4-f6b71b9467ab",
+   "metadata": {},
+   "source": [
+    "### Des données de test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd0438dc-8df6-4b3f-a61e-098b17516ba8",
+   "metadata": {},
+   "source": [
+    "Comme nous avons entraîné notre modèle sur des textes issus du corpus *Brown*, prenons d’autres textes pour lesquels nous connaissons la bonne catégorie :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae7efa6-32af-408e-ad36-5b4c97d98a25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./data/brown.pkl', 'rb') as f:\n",
+    "    df = pickle.load(f)\n",
+    "\n",
+    "# first 5 texts\n",
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f918615e-1de2-4341-ab82-f221b9c4affb",
+   "metadata": {},
+   "source": [
+    "### Préparer les données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c43a639-238c-404b-b886-b43e76235f95",
+   "metadata": {},
+   "source": [
+    "Il convient désormais de préparer les données de test de la même manière que celles qui ont servi lors de la phase d‘apprentissage :\n",
+    "\n",
+    "1. Sélectionner les variables ;\n",
+    "2. Normaliser ;\n",
+    "3. Projeter dans le sous-espace vectoriel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05ce8819-190b-43e9-973d-5e8c0a171dca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = df.drop(columns=['Category']).values\n",
+    "X_test_scaled = (X_test - X_test.mean()) / X_test.std()\n",
+    "X_test_projected = np.dot(X_test_scaled, components)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8935212-6582-4fc4-a49c-80e1e199814e",
+   "metadata": {},
+   "source": [
+    "### Appliquer le modèle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca242854-d087-4b9d-8196-28215adac0e8",
+   "metadata": {},
+   "source": [
+    "Il reste à appliquer le modèle pour chaque nouvelle observation, ressortir les scores et prédire leur classe :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64707721-a739-4213-a4dc-70d6bfe73df5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = [\n",
+    "    [\n",
+    "        np.dot(data, W_k) + b_k\n",
+    "        for W_k, b_k in coefficients\n",
+    "    ]\n",
+    "    for data in X_test_projected\n",
+    "]\n",
+    "y_pred = classes[np.argmax(scores, axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "479f768e-476b-43d9-9b05-72cad850ec4e",
+   "metadata": {},
+   "source": [
+    "### Métriques d’évaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0552257d-7f82-430f-ad12-3d800e62f5f8",
+   "metadata": {},
+   "source": [
+    "#### Déterminer la précision globale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079a09e9-b196-440e-9df4-0610932a4108",
+   "metadata": {},
+   "source": [
+    "Pour connaître la précision globale de notre modèle, nous allons calculer le taux de bonnes réponses :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "778b1222-0fbf-49bc-a2dc-ecf6303b5ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = df.Category\n",
+    "global_accuracy = sum(y_pred == y_test) / len(y_pred)\n",
+    "\n",
+    "print(f'Précision globale : {global_accuracy:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a85fd5-9268-4c5d-8c9e-70ea45759735",
+   "metadata": {},
+   "source": [
+    "#### Établir la matrice de confusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a59894-b162-4a63-8bc1-5ccfe650b3d9",
+   "metadata": {},
+   "source": [
+    "La précision globale n’est pas très rassurante. Regardons en détail avec la matrice de confusion. Utilisons pour cela la bibliothèque *Scikit-Learn* :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b7b697-3943-4299-97e9-a4269fc7a268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfm = confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dd4dbc2-f867-415f-a7ba-9dc7a9ce069b",
+   "metadata": {},
+   "source": [
+    "Chaque ligne de la matrice correspond à une classe réelle et chaque colonne à une classe prédite. Visuellement, il est plus simple d’analyser la matrice de confusion avec une carte de chaleur :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cf6146b-52cb-4ec8-a46a-8957d910843c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(\n",
+    "    cfm,\n",
+    "    annot=True,\n",
+    "    fmt='d',\n",
+    "    cmap='Blues',\n",
+    "    xticklabels=classes,\n",
+    "    yticklabels=classes\n",
+    ")\n",
+    "\n",
+    "plt.xlabel('Predictions')\n",
+    "plt.ylabel('True labels')\n",
+    "plt.title('Confusion Matrix')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ffa0e26-e24b-41c6-ad27-a04a6cc8f9f2",
+   "metadata": {},
+   "source": [
+    "Les résultats sont édifiants : notre modèle ne prédit qu’une classe pour tous les textes, ce qui explique sa lamentable performance globale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65639ccf-8671-4d92-8697-9ca9a77ff867",
+   "metadata": {},
+   "source": [
+    "#### Les mesures dérivées"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b6ce2e7-27e8-40cd-8d36-8f78d6f1152d",
+   "metadata": {},
+   "source": [
+    "Dans un cas de classification binaire, on a coutume de calculer des métriques basées sur quatre cas :\n",
+    "\n",
+    "- Les **vrais positifs** (*true positive* ou TP) : le nombre de fois où le modèle a attribué correctement la classe positive ;\n",
+    "- les **faux positifs** (*false positive* ou FP) : le nombre de fois où le modèle a faussement attribué la classe positive à un exemple qui appartient en réalité à la classe négative ;\n",
+    "- les **vrais négatifs** (*true negative* ou TN) : le nombre de fois où le modèle a attribué correctement la classe négative ;\n",
+    "- les **faux négatifs** (*false negative* ou FN) : le nombre de fois où le modèle a faussement attribué la classe négative à un exemple qui appartient en réalité à la classe positive.\n",
+    "\n",
+    "De là, nous pouvons calculer des métriques importantes telles que la précision, le rappel, la spécificité, et le score F1.\n",
+    "\n",
+    "La **précision** (*precision*) s’intéresse à l’exactitude des prédictions positives et se résout avec la formule :\n",
+    "\n",
+    "$$\n",
+    "\\text{precision} = \\frac{TP}{TP + FP}\n",
+    "$$\n",
+    "\n",
+    "Le **rappel** (*recall*), ou sensibilité, détermine le taux de classes positives que le modèle a correctement étiquetées selon la formule :\n",
+    "\n",
+    "$$\n",
+    "\\text{recall} = \\frac{TP}{TP + FN}\n",
+    "$$\n",
+    "\n",
+    "Le **taux de vrais négatifs** (*true negative rate*), ou score de spécificité, mesure la capacité du modèle à identifier correctement les échantillons négatifs grâce au rapport :\n",
+    "\n",
+    "$$\n",
+    "\\text{TNR} = \\frac{TN}{TN + FP}\n",
+    "$$\n",
+    "\n",
+    "Le **score F1** établit quant à lui la moyenne harmonique entre la précision et le rappel :\n",
+    "\n",
+    "$$\n",
+    "\\text{F1} = 2 \\times \\frac{\\text{precision} \\times \\text{recall}}{\\text{precision} + \\text{recall}}\n",
+    "$$\n",
+    "\n",
+    "Dans notre exemple, nous sommes dans le cas d’une classification multi-classes où le modèle doit choisir parmi plusieurs laquelle est la plus adaptée. Pour cette raison, la classe positive est la classe qu’il faudrait attribuer et la classe négative est constituée de toutes les autres.\n",
+    "\n",
+    "Intéressons-nous uniquement aux résultats pour la classe positive *mystery* :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04818c73-ab3f-4fa1-b5f9-041b553758c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP, FP, TN, FN = 21, 38, 0, 0\n",
+    "\n",
+    "precision = TP / (TP + FP)\n",
+    "recall = TP / (TP + FN)\n",
+    "TNR = TN / (TN + FP)\n",
+    "f1_score = 2 * ((precision * recall) / (precision + recall))\n",
+    "\n",
+    "print(\n",
+    "    f\"Précision : {precision:.4f}\",\n",
+    "    f\"Rappel : {recall:.4f}\",\n",
+    "    f\"TNR : {TNR:.4f}\",\n",
+    "    f\"Score F1 : {f1_score:.4f}\",\n",
+    "    sep=\"\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b2462e0-140f-47c5-9d0f-1c0299d25bef",
+   "metadata": {},
+   "source": [
+    "#### Interprétation des résultats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dc49686-9bab-4322-ab12-001f41c45dc1",
+   "metadata": {},
+   "source": [
+    "Avec un rappel de 1, notre modèle identifie clairement tous les textes de la catégorie *mystery* dans le jeu de données de test, sans ne jamais se tromper. Mais ne nous réjouissons pas hâtivement : nous parviendrions au même résultat si on attribuait à tous les textes la même étiquette.\n",
+    "\n",
+    "C’est ce que nous enseigne le taux de vrais négatifs : le modèle n’est jamais parvenu à identifier une classe autre que *mystery*…\n",
+    "\n",
+    "Par ailleurs, souvenons-nous que la précision est loin d’être folle : seulement 36 % de bonnes étiquettes attribuées. Aussi, le score F1 nous conforte dans ce triste constat : le modèle n’équilibre pas la précision et le rappel de manière optimale.\n",
+    "\n",
+    "La raison de cet échec ne viendrait-elle pas de la faible quantité de données sur lesquelles nous avons entraîné notre modèle ?"
+   ]
   }
  ],
  "metadata": {
