--- a/4.data-analysis/answers/5.2.comparing-vectors.ipynb
+++ b/4.data-analysis/answers/5.2.comparing-vectors.ipynb
@@ -161,7 +161,7 @@
     "# working copy\n",
     "df_norm = df.copy()\n",
     "\n",
-    "# vectors are represented by their mean\n",
+    "# vectors are represented by their norm\n",
     "df_norm.action = df_norm.action.apply(np.linalg.norm)\n",
     "df_norm.biodiversity = df_norm.biodiversity.apply(np.linalg.norm)\n",
     "\n",
