More explanations about calculus

--- a/4.data-analysis/6.linear-discriminant-analysis.ipynb
+++ b/4.data-analysis/6.linear-discriminant-analysis.ipynb
@@ -294,17 +294,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cls in classes:\n",
+    "for i in classes:\n",
     "    # matrix for a class\n",
-    "    X_cls = X_scaled[y == cls]\n",
-    "    mu_cls = means_per_class[cls]\n",
+    "    X_i = X_scaled[y == i]\n",
+    "    mu_k = means_per_class[i]\n",
     "    \n",
     "    # within-class scatter\n",
-    "    S_W += np.dot((X_cls - mu_cls).T, (X_cls - mu_cls))\n",
+    "    S_W += np.dot((X_i - mu_k).T, (X_i - mu_k))\n",
     "    \n",
     "    # between-class scatter\n",
-    "    n_cls = X_cls.shape[0]\n",
-    "    S_B += n_cls * np.outer(mu_cls - mu, mu_cls - mu)"
+    "    n_k = X_i.shape[0]\n",
+    "    S_B += n_k * np.outer((mu_k - mu), (mu_k - mu))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4674a375-cf6e-4596-8147-1bd354c5df30",
+   "metadata": {},
+   "source": [
+    "**Explications :**\n",
+    "\n",
+    "- Pour chaque classe, nous conservons une matrice $3 \\times 6$ des trois textes décrits par les six variables ainsi qu’un vecteur des six moyennes ;\n",
+    "- $S_W$ étant définie dans l’espace des dimensions, nous souhaitons in fine une matrice $6 \\times 6$ et non une matrice $3 \\times 3$ ;\n",
+    "- pour $S_W$, le produit matriciel $(X_i − \\mu_k)^T \\cdot (X_i − \\mu_k)$ équivaut à la somme des produits extérieurs $(x_i - \\mu_k)(x_i - \\mu_k)^T$ pour tous les $i \\in C_k $ ;\n",
+    "- le produit extérieur des deux vecteurs $\\mu_k \\in \\mathbb{R}^6$ et $\\mu \\in \\mathbb{R}^6$ donne une matrice $6 \\times 6$."
    ]
   },
   {
