Note about fcluster

--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -474,7 +474,7 @@
    "source": [
     "Jusqu’ici, les techniques de partitionnement proposées étaient plutôt simples et élémentaires : elles permettaient de dégager des appariements, tout au plus des regroupements de trois éléments. L’objectif à présent est de présenter une méthode plus systématique qui va, à chaque étape, effectuer des regroupements deux à deux jusqu’à ce qu’il ne reste plus qu’un seul groupe constitué de l’ensemble des autres.\n",
     "\n",
-    "On peut matérialiser cette méthode de classification ascendante hiérarchique (HAC pour *Hierarchical Agglomerative Classification*) grâce à un dendogramme :"
+    "On peut matérialiser cette méthode de classification ascendante hiérarchique (HAC pour *Hierarchical Agglomerative Classification*) grâce à un dendrogramme :"
    ]
   },
   {
@@ -1054,7 +1054,7 @@
    "id": "b72102a8-0b9e-4ad6-838d-4c1372ea8c45",
    "metadata": {},
    "source": [
-    "Le module dispose également d’une méthode `.dendogram()` pour afficher le résultat du regroupement :"
+    "Le module dispose également d’une méthode `.dendrogram()` pour afficher le résultat du regroupement :"
    ]
   },
   {
@@ -1071,6 +1071,45 @@
     "    leaf_font_size=10,\n",
     "    color_threshold=0.7 * max(Z[:, 2])\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce877245-24bc-4a38-ad39-b72d34e19ed2",
+   "metadata": {},
+   "source": [
+    "### Assigner les données à une partition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c2d905-c2b3-4ef8-8a30-74cb6b2a195a",
+   "metadata": {},
+   "source": [
+    "Une fois la méthode choisie et le partitionnement établi, il reste à assigner un cluster au texte en fonction du dendrogramme. La méthode `.fcluster()` de *Scipy* répond à la question :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9d0ecd-095e-4f91-918f-293debf80482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_clusters = 3\n",
+    "clusters = hierarchy.fcluster(Z, t=n_clusters, criterion=\"maxclust\")\n",
+    "\n",
+    "df['Cluster'] = clusters\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e502a16-59c9-48af-a6d5-20e0468193af",
+   "metadata": {},
+   "source": [
+    "Le paramètre `t` accepte un scalaire dont le sens est défini par le paramètre `criterion` qui lui-même fixe la méthode pour déterminer où couper l’arbre. Lorsqu’il prend la valeur `maxclust`, le nombre dans `t` est le nombre de partitions à choisir."
    ]
   },
   {
@@ -1143,6 +1182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = df.drop(columns='Cluster')\n",
     "df_scaled = (df.values - np.mean(df.values, axis=0)) / np.std(df.values, axis=0)"
    ]
   },
@@ -1209,7 +1249,7 @@
    "id": "42797ade-fe2a-4d65-a02c-0dfaf2bf33f1",
    "metadata": {},
    "source": [
-    "La fonction `kmeans()` de *Scipy* permet ensuuite d’appliquer l’algorithme des *k*-moyennes :"
+    "La fonction `kmeans()` de *Scipy* permet ensuite d’appliquer l’algorithme des *k*-moyennes :"
    ]
   },
   {
@@ -1260,7 +1300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.Cluster.value_counts()"
+    "display(df.Cluster.value_counts())"
    ]
   },
   {
