--- a/4.data-analysis/7.pca.ipynb
+++ b/4.data-analysis/7.pca.ipynb
@@ -709,9 +709,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12,5))\n",
     "\n",
     "_ = sns.scatterplot(data=df, x=\"PS_FSAFEN\", y=\"JE_EMPL\", ax=axes[0])\n",
@@ -1083,7 +1080,7 @@
     "tags": []
    },
    "source": [
-    "### Étape 5 : charger la matrice des composantes principales"
+    "### Étape 6 : charger la matrice des composantes principales"
    ]
   },
   {
@@ -1118,7 +1115,7 @@
    "id": "9cc48894-4f41-4f95-8553-ef36528081de",
    "metadata": {},
    "source": [
-    "### Étape 6 : analyser le lien entre les variables"
+    "### Étape 7 : analyser le lien entre les variables"
    ]
   },
   {
@@ -1239,7 +1236,7 @@
    "id": "8c7494e8-8f76-4e3a-838f-8fabc1644f60",
    "metadata": {},
    "source": [
-    "### Étape 7 : analyser la variabilité des observations"
+    "### Étape 8 : analyser la variabilité des observations"
    ]
   },
   {
@@ -1423,7 +1420,7 @@
    "source": [
     "VT_k = VT[:n_components, :]\n",
     "\n",
-    "pca = X_scaled @ VT_k.T\n",
+    "pca = X_scaled @ VT_k.T # matrix product\n",
     "pca.columns = [ f\"PC{n}\" for n in range(1, n_components + 1) ]"
    ]
   },
@@ -1442,6 +1439,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# recoding HS_LEB\n",
+    "pca[\"HS_LEB_cat\"] = pd.cut(X.HS_LEB, bins=bins, labels=labels, include_lowest=True)\n",
+    "\n",
     "# a figure with 2 subplots\n",
     "(fig, axes) = plt.subplots(1, 2, figsize=(18, 6))\n",
     "\n",
