Add ref to dataset

--- a/4.data-analysis/2.data-frames.ipynb
+++ b/4.data-analysis/2.data-frames.ipynb
@@ -684,7 +684,7 @@
    "source": [
     "La gestion des données manquantes est une étape cruciale de la phase de préparation d’un *dataset*. Pour une seule variable manquante, faut-il écarter l’observation complète, lui attribuer une valeur par défaut ou encore opter pour une solution plus élaborée ?\n",
     "\n",
-    "Chargeons un autre jeu de données, extrait d’une enquête sur les troubles de l’alimentation ([Davis, 1997](#À-propos-des-données)). La méthode `.info()` permet de visualiser rapidement s’il existe ou non des variables qui contiennent des données manquantes :"
+    "Chargeons un autre jeu de données, extrait d’une enquête sur les troubles de l’alimentation ([Davis, 1997](./0.about-datasets.ipynb#Self-Reports-of-Height-and-Weight)). La méthode `.info()` permet de visualiser rapidement s’il existe ou non des variables qui contiennent des données manquantes :"
    ]
   },
   {
