--- a/4.data-analysis/6.cluster-analysis.ipynb
+++ b/4.data-analysis/6.cluster-analysis.ipynb
@@ -277,7 +277,11 @@
     "\n",
     "$$\n",
     "d(\\mathbf{x}, \\mathbf{y}) = \\sqrt{\\sum_{i=1}^{n} (x_i - y_i)^2}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Cette mesure est sensible aux différences de magnitude entre les vecteurs car elle mesure directement la distance géométrique dans l’espace multidimensionnel. En effet, la distance qui sépare deux vecteurs $\\vec{A}$ et $\\vec{B}$ sera fortement impactée par la différence de leurs normes même si leurs directions sont similaires.\n",
+    "\n",
+    "Par ailleurs, dans le cas où les vecteurs ne seraient pas normalisés ou si une de leurs dimensions est sur-représentée (sa valeur est bien plus grande que les autres), la distance euclidienne en sera d’autant plus biaisée en raison de l’élévation au carré des différences entre dimensions."
    ]
   },
   {
@@ -416,7 +420,7 @@
     "\\cos{\\theta} = \\frac{A \\cdot B}{\\|A\\| \\|B\\|}\n",
     "$$\n",
     "\n",
-    "La similarité cosinus est souvent utilisée en linguistique car elle conserve l'information sur la direction des vecteurs, tandis que la distance euclidienne évalue uniquement la distance géométrique entre les vecteurs. En établissant que deux vecteurs pointent dans la même direction de l’espace, la similarité cosinus permet d’inférer une similarité sémantique.\n",
+    "La similarité cosinus est souvent utilisée en linguistique car elle conserve l'information sur la direction des vecteurs, tandis que la distance euclidienne évalue uniquement leur distance géométrique dans l’espace multidimensionnel. En établissant que deux vecteurs pointent dans la même direction de l’espace, la similarité cosinus permet d’inférer une similarité sémantique.\n",
     "\n",
     "Le résultat est un nombre situé dans l’intervalle $[−1,1]$ où :\n",
     "- $1$ signifie que les vecteurs sont alignés dans la même direction ;\n",
