--- a/4.data-analysis/8.pca.ipynb
+++ b/4.data-analysis/8.pca.ipynb
@@ -571,10 +571,10 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "    \\vec{v_1} &= \\begin{bmatrix} \\frac{1}{\\sqrt{2}} \\\\ \\frac{1}{\\sqrt{2}} \\end{bmatrix} \\\\\n",
-    "    \\vec{v_1} &= \\begin{bmatrix} 0.70710678 \\\\ 0.70710678 \\end{bmatrix} \\\\\n",
-    "    \\vec{v_2} &= \\begin{bmatrix} \\frac{-1}{\\sqrt{2}} \\\\ \\frac{1}{\\sqrt{2}} \\end{bmatrix} \\\\\n",
-    "    \\vec{v_2} &= \\begin{bmatrix} -0.70710678 \\\\ 0.70710678 \\end{bmatrix}\n",
+    "    \\vec{v_1} &= \\begin{bmatrix} \\frac{1}{\\sqrt{2}} \\\\ \\frac{1}{\\sqrt{2}} \\end{bmatrix}\n",
+    "    = \\begin{bmatrix} 0.70710678 \\\\ 0.70710678 \\end{bmatrix} \\\\\n",
+    "    \\vec{v_2} &= \\begin{bmatrix} \\frac{-1}{\\sqrt{2}} \\\\ \\frac{1}{\\sqrt{2}} \\end{bmatrix}\n",
+    "    = \\begin{bmatrix} -0.70710678 \\\\ 0.70710678 \\end{bmatrix}\n",
     "\\end{align}\n",
     "$$"
    ]
