Section on evaluation

--- a/4.data-analysis/4.linear-regression.ipynb
+++ b/4.data-analysis/4.linear-regression.ipynb
@@ -143,7 +143,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from scipy.stats import pearsonr"
+    "from scipy.stats import pearsonr, shapiro, levene, bartlett"
    ]
   },
   {
@@ -826,6 +826,216 @@
     "    return mae\n",
     "\n",
     "print(f\"MAE : {mean_absolute_error(Y, Y_pred)} mm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b776558-5305-44c7-89cf-bf3c642783dc",
+   "metadata": {},
+   "source": [
+    "## Analyse des résidus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37e554cc-617e-4614-8643-16ed8540c250",
+   "metadata": {},
+   "source": [
+    "Nous avons établi plus haut la fonction affine qui permet de tracer la droite de régression qui minimise la moyenne des écarts à la moyenne :\n",
+    "\n",
+    "$$\n",
+    "y = mx + b\n",
+    "$$\n",
+    "\n",
+    "Nous avons également relevé qu’il existait, entre cette droite idéale tracée par les prédictions et les valeurs observées empiriquement, un écart que nous avons nommé *erreur*. Dans le modèle de régression linéaire, nous ajoutons ce paramètre à la fonction affine en terme de *bruit* :\n",
+    "\n",
+    "$$\n",
+    "y = \\beta_0 + \\beta_1 x + \\epsilon\n",
+    "$$\n",
+    "\n",
+    "La notion de bruit traduit la variabilité entre les prédictions du modèle et les observations réelles et nous permet d’identifier ses lacunes en vérifiant notamment si les hypothèses fondamentales, comme l’homoscédasticité et la linéarité, sont bien respectées. On effectue pour cela une **analyse des résidus**.\n",
+    "\n",
+    "Les résidus, ce sont ces écarts entre les prédictions et la variable indépendante qui constituent la partie inexpliquée de notre modèle :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e5feb1-7e06-48ae-951a-dbdb95403b61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "residuals = Y - Y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e376893-1dc1-4ac0-bca3-97d47ebfc6bd",
+   "metadata": {},
+   "source": [
+    "Plus que de simples erreurs sans signification, leur distribution peut nous renseigner sur la précision du modèle : si elle est aléatoire et de faible amplitude, elle révèlera que le modèle capture bien les structures sous-jacentes des données ; à l’inverse, des résidus structurés ou de grande amplitude suggèreront que le modèle est inadéquat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5e62eb-fb38-4f67-aeec-04f0fcf3ab66",
+   "metadata": {},
+   "source": [
+    "### Visualisation des résidus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e10d794-7cba-44cb-95cf-19762ae45792",
+   "metadata": {},
+   "source": [
+    "En affichant le **terrain résiduel**, nous devons être en mesure de confirmer les hypothèses fondamentales de tout modèle linéaire, à savoir **la linéarité** et **l’homoscédasticité** (la variance des résidus est constante). Si les points sont répartis aléatoirement autour de la ligne de référence qui matérialise l’absence de résidus, tout va bien ! Si au contraire on remarque des regroupements ou si un motif apparaît, comme une courbe, alors notre modèle n’est pas adapté.\n",
+    "\n",
+    "Dans notre exemple, le phénomène aléatoire nous semble bien retranscrit :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5eecd4dc-78b4-4819-ac0d-b0072a96d0a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(x=Y_pred, y=residuals, marker='^', alpha=0.7, s=80, linewidth=0.5)\n",
+    "plt.axhline(0, color='red', linestyle='--')\n",
+    "plt.title('Residual plot', fontsize=14)\n",
+    "plt.xlabel('Predicted values', fontsize=12)\n",
+    "plt.ylabel('Residuals', fontsize=12)\n",
+    "plt.grid(alpha=0.3)\n",
+    "sns.despine()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c69925-87e1-4d3e-a7c0-847cb1bbf659",
+   "metadata": {},
+   "source": [
+    "### Tester la normalité d’une distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f2746b3-501a-4397-9635-964b16a4d88a",
+   "metadata": {},
+   "source": [
+    "Afin de prouver que la distribution des résidus est un phénomène aléatoire, on peut la soumettre à un test statistique comme celui de Shapiro-Wilk qui vérifie sa normalité. L’hypothèse nulle $H_0$ établit que les résidus sont normalement distribués.\n",
+    "\n",
+    "Avec une valeur-p inférieure au seuil de 0,05, nous la rejetons et devons conclure que notre modèle n’est pas adéquat à décrire les données :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51d3ef0e-b392-44de-871e-5b206ec75215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat, p_value = shapiro(residuals)\n",
+    "print(\n",
+    "    f\"Score : {stat}\",\n",
+    "    f\"Valeur-p : {p_value}\",\n",
+    "    sep=\"\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59560112-f0b5-4b89-8b15-9e7a797e8c05",
+   "metadata": {},
+   "source": [
+    "D’autres tests existent, comme celui de Kolmogorov-Smirnov (plus sensible aux écarts dans de grands ensembles d’échantillons) ou encore celui de Anderson-Darling qui va définir des seuils critiques sans calculer une valeur-p directement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b10263e0-49f2-4f18-9336-5b95cab3902d",
+   "metadata": {},
+   "source": [
+    "### Tester l’homoscédasticité d’une distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdb0bf10-dc31-441c-a63f-a5434afcc9a8",
+   "metadata": {},
+   "source": [
+    "Afin de déterminer si la variance est constante dans les résidus, nous pouvons constituer deux groupes séparés par la médiane :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "055b21b1-4d0d-4a9a-b033-953f048e42a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group1 = residuals[Y_pred < np.median(Y_pred)]\n",
+    "group2 = residuals[Y_pred >= np.median(Y_pred)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "101a8ce1-4040-415a-b533-3f512ae926c8",
+   "metadata": {},
+   "source": [
+    "Et lancer le test de Bartlett qui évalue si leurs variances sont égales :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "216223b6-af26-408a-acf1-05724be73c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat, p_value = bartlett(group1, group2)\n",
+    "\n",
+    "print(\n",
+    "    f\"Score : {stat}\",\n",
+    "    f\"Valeur-p : {p_value}\",\n",
+    "    sep=\"\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7a8a9cc-e541-45d8-a031-d5daa6d86d07",
+   "metadata": {},
+   "source": [
+    "Avec une valeur-p supérieure au seuil de 0,05, nous pouvons conserver l’hypothèse nulle d’homoscédasticité.\n",
+    "\n",
+    "Malgré tout, gardons à l’esprit que nos résidus ne sont pas normalement distribués et optons pour un test moins sensible à la contrainte de normalité :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4493853-e7f7-4e79-8af5-ff715e7188c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat, p_value = levene(group1, group2)\n",
+    "\n",
+    "print(\n",
+    "    f\"Score : {stat}\",\n",
+    "    f\"Valeur-p : {p_value}\",\n",
+    "    sep=\"\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d55229-3b66-4be9-8063-2f604fe2b2f9",
+   "metadata": {},
+   "source": [
+    "La valeur-p est toujours supérieure au seuil 0,05, ce qui tend à valider l’hypothèse nulle de constance de la variance entre les différents groupes."
    ]
   }
  ],
